--- a/Ecommerce/src/components/filters/filters.scss
+++ b/Ecommerce/src/components/filters/filters.scss
@@ -17,8 +17,10 @@
       border-bottom: 1px solid #eee;
   
       h2 {
-        font-size: 1.2rem;
-        color: #333;
+        font-size: 1.875rem;
+        color: #515151;
+        font-weight: 700;
+
       }
   
       .reset-btn {
