--- a/Ecommerce/src/styles/navbar.scss
+++ b/Ecommerce/src/styles/navbar.scss
@@ -3,45 +3,52 @@ header {
     width: 100%;
   }
   
-  .container {
-    margin: 0 129px 0 135px;
-    // margin-left: 129px;
+  // .container {
+    // margin: 0 129px 0 135px;
+  //   // margin-left: 129px;
 
-    padding: 0 1rem;
-  }
+  //   padding: 0 1rem;
+  // }
   
   .navbar-top {
     background-color: #8b185e;
     padding: 0.75rem 0;
+    height: 4.0625rem;
   
     .container {
       display: flex;
       align-items: center;
-      gap: 2rem;
+    //   gap: 2rem;
+      margin-left: 8.0625rem;
+      margin-right: 8.4375rem;
     }
   
-    .logo {
-      img {
-        height: 30px;
-      }
-    }
+    // .logo {
+    //   img {
+    //     height: 30px;
+    //   }
+    // }
   
     .location {
       display: flex;
       align-items: center;
-      gap: 0.5rem;
+      gap: 0.8125rem;
       color: white;
-      img {
-        width: 20px;
-        height: 20px;
-      }
+      margin-left: 2.75rem;
+      margin-right: 2.9375rem;
+
+    //   img {
+    //     width: 20px;
+    //     height: 20px;
+    //   }
     }
   
     .search-bar {
       flex: 1;
       display: flex;
-      height: 40px;
-  
+      height: 2.25rem;
+      // margin-left: 2.9375rem;
+
       .select-wrapper {
         position: relative;
         select {
@@ -50,17 +57,20 @@ header {
           border: none;
           border-radius: 4px 0 0 4px;
           background-color: white;
-          padding-right: 2rem; // مساحة للسهم
-      appearance: none; // إزالة السهم الافتراضي
+          padding-right: 2rem; 
+      appearance: none; 
+      width: 4.6875rem;
+      // margin-left: 2.9375rem;
+
         }
         .select-arrow {
             position: absolute;
             right: 0.5rem;
             top: 50%;
             transform: translateY(-50%);
-            width: 12px;
-            height: 12px;
-            pointer-events: none; // لتجنب التداخل مع السيلكت
+            width: 18px;
+            height: 18px;
+            pointer-events: none; 
           }
         
     
@@ -92,7 +102,7 @@ header {
     .actions {
       display: flex;
       align-items: center;
-      gap: 1.5rem;
+    //   gap: 1.5rem;
       color: white;
   
       button {
@@ -104,15 +114,20 @@ header {
         gap: 0.5rem;
         cursor: pointer;
   
-        img {
-          width: 20px;
-          height: 20px;
+        .iconlan {
+            margin-left: 57px;
+               }
+        .login {
+            margin-right: 74px;
+        }
+        .languge{
+            margin-right: 53px;
         }
       }
   
       .icons-group {
         display: flex;
-        gap: 1rem;
+        gap: 1.875rem;
   
         button {
           position: relative;
@@ -139,42 +154,58 @@ header {
   .navbar-bottom {
     background-color: #731449;
     padding: 0.5rem 0;
+    height: 2.75rem;
+    
   
     .container {
       display: flex;
       align-items: center;
       gap: 2rem;
+      margin-left: 8.0625rem;
+
     }
   
     .categories-btn {
       display: flex;
       align-items: center;
-      gap: 0.5rem;
+      // gap: 0.5rem;
       background: none;
       border: none;
       color: white;
       cursor: pointer;
-  
+
+
+      .categorie {
+        font-size: 14px;
+        font-weight: 400;
+        width: 93px;
+        margin-left: 0.9375rem;
+
+    }
       .arrow-icon {
-        width: 12px;
-        height: 12px;
-        margin-left: 0.5rem;
+        // width: 12px;
+        // height: 12px;
+        margin-left: 1.3125rem;
       }
 
-      img {
-        width: 20px;
-        height: 20px;
-      }
+    //   img {
+    //     width: 20px;
+    //     height: 20px;
+    //   }
     }
   
     .main-menu {
       display: flex;
-      gap: 2rem;
+      gap: 1.5rem;
+      width: 671px;
+
   
       a {
         color: white;
         text-decoration: none;
-        font-size: 0.9rem;
+        font-size: 0.875rem;
+        font-weight: 400;
+
   
         &:hover {
           text-decoration: underline;
