npm i redux for project use redux to connect between all icon and navbar merge filter and create state for show me filters only

--- a/Ecommerce/src/styles/navbar.scss
+++ b/Ecommerce/src/styles/navbar.scss
@@ -136,8 +136,8 @@ header {
             position: absolute;
             top: -8px;
             right: -8px;
-            background: #ff4081;
-            color: white;
+            background: #ffffff;
+            color: #752157;
             border-radius: 50%;
             width: 18px;
             height: 18px;
