--- a/Ecommerce/src/styles/layout.scss
+++ b/Ecommerce/src/styles/layout.scss
@@ -3,7 +3,7 @@
     min-height: 100vh;
     display: flex;
     flex-direction: column;
-    width: 100vw;
+    // width: 100vw;
   }
   
   .main-content {
