--- a/Ecommerce/src/styles/home.scss
+++ b/Ecommerce/src/styles/home.scss
@@ -147,6 +147,8 @@
   max-width: 957px;
   margin: 0 auto;
   justify-content: center;
+  margin-top: 49px;
+
   
   // Mobile first approach
   grid-template-columns: repeat(1, minmax(auto, 13.824375rem));
