--- a/Ecommerce/src/styles/layout.scss
+++ b/Ecommerce/src/styles/layout.scss
@@ -1,9 +1,8 @@
-// src/styles/layout.scss
 .layout {
     min-height: 100vh;
     display: flex;
     flex-direction: column;
-    // width: 100vw;
+    width: 100vw;
   }
   
   .main-content {
