--- a/Ecommerce/src/styles/home.scss
+++ b/Ecommerce/src/styles/home.scss
@@ -1,4 +1,3 @@
-// src/styles/home.scss
 
 .home-page {
   background-color: #FFFFFF;
@@ -13,48 +12,86 @@
   background-position: center;
   height: 22.313125rem;
 
+ 
+  .container {
+    height: 173px;
+    margin-top: 20px;
+
+  }
+
   .hero-content {
     color: #752157;
     margin-left: 19.5rem;
-
+    height: 173px;
+    display: flex;
+    flex-direction: column;
+    padding-top: 20px;
+  
     h1 {
-      font-size: 2.5rem;
-      margin-bottom: 1rem;
+      font-size: 2.2rem;
       font-weight: 700;
+      margin: 0;
+      display: flex;
+      flex-direction: column;
+      gap: 5px;
+  
+      .first-line {
+        display: flex;
+        align-items: center;
+        gap: 0.5rem;
+        height: 40px;
+  
+        .title {
+          color: #752157;
+          font-weight: 700;
+        }
+  
+        .subtitle {
+          color: #8b185e;
+          font-weight: 400;
+          font-size: 36px;        }
+      }
       
-      span {
-        display: block;
-        color: #8b185e;
+      .second-line {
+        display: flex;
+        align-items: center;
+        gap: 0.5rem;
+        height: 40px;
+  
+        .prefix {
+          color: rgba(117, 33, 87, 1);
+          font-weight: 300;
+          font-size: 36px;
+          line-height: 40px;
+        }
+  
+        .main-text {
+          color: #752157;
+          font-weight: 700;
+        }
       }
     }
-
-    h2 {
-      font-size: 1.8rem;
-      margin-bottom: 1rem;
-      font-weight: 600;
-    }
-
+  
     p {
-      color: #666;
-      margin-bottom: 2rem;
-      max-width: 37.5rem;
-      font-size: 1rem;
-      line-height: 1.5;
+      color: rgba(118, 118, 118, 1);
+      margin: 0 0 10px 0;
+      max-width: 28.9375rem;
+      font-size: 0.875rem;
+      line-height: 1.25rem;
     }
-
+  
     .discover-btn {
-      background: #8b185e;
-      color: white;
-      border: none;
-      padding: 0.75rem 2rem;
-      border-radius: 0.25rem;
+      color: rgba(117, 33, 87, 1);
+      border: 2px solid rgba(117, 33, 87, 1);
+      padding: auto;
+      border-radius: 0.5rem;
       cursor: pointer;
-      font-size: 1rem;
+      font-size: 1.125rem;
       transition: background-color 0.2s ease;
-
-      &:hover {
-        background: #731449;
-      }
+      width: 180px;
+      height: 29.75px;
+      background-color: initial;
+      margin-top: 5px;
     }
   }
 }
