--- a/Ecommerce/src/styles/main.scss
+++ b/Ecommerce/src/styles/main.scss
@@ -1,4 +1,6 @@
-// src/styles/main.scss
+@import url('https://fonts.googleapis.com/css2?family=Almarai:wght@300;400;700&display=swap');
+
+
 * {
     margin: 0;
     padding: 0;
@@ -10,7 +12,7 @@
   }
   
   body {
-    font-family: 'Roboto', sans-serif;
+    font-family: Almarai, sans-serif;
     background-color: #f5f5f5;
   }
   
