--- a/Ecommerce/src/components/FilterBar.scss
+++ b/Ecommerce/src/components/FilterBar.scss
@@ -1,6 +1,8 @@
 
 .filter-bar {
     width: 59.8125rem; 
+    height: 3.4375rem;
+
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -10,13 +12,19 @@
     margin-left: 651px;
     position: relative;
     z-index: 5;
-    margin-top: 58px;
+    margin-top: 73.99px;
 
-    @media (max-width: 1399px) {
-      width: 100%;
-      max-width: 957px;
-      margin: 0 auto 1.5rem;
-    }
+    // @media (max-width: 1600px) {
+    //     width: calc(59.8125rem - ((1600px - 100vw) * 0.3));
+    //     margin-left: auto;
+    //     margin-right: auto;
+    //   }
+  
+      @media (max-width: 1399px) {
+        width: 100%;
+        max-width: 957px;
+        margin: 0 auto 1.5rem;
+      }
   
     @media (max-width: 600px) {
       flex-direction: column;
@@ -132,3 +140,4 @@
       }
     }
 }
+
