--- a/Ecommerce/src/components/filters/filters.scss
+++ b/Ecommerce/src/components/filters/filters.scss
@@ -8,7 +8,41 @@
     display: block;
   }
 }
+.category-header {
+  margin-bottom: 0.566rem;
+  margin-top: -111px;
 
+  h3 {
+    font-size: 1rem;
+    font-weight: 400;
+    color: rgba(117, 33, 87, 1);
+    font-family: Almarai, sans-serif;
+    line-height: 1.875rem;
+
+  }
+
+  h2 {
+    font-size: 1.875rem;
+    color: rgba(81, 81, 81, 1);
+    font-weight: 400;
+    font-family: Almarai, sans-serif;
+    line-height: 1.875rem;
+  }
+
+  .items-count {
+    font-size: 0.875rem;
+    font-weight: 400;
+    line-height: 1.875rem;
+
+
+    color: rgba(118, 118, 118, 1);
+    font-family: Almarai, sans-serif;
+  }
+
+  @media (max-width: 767px) {
+    padding: 0 1rem;
+  }
+}
 .filter-toggle-btn {
   width: 100%;
   padding: 0.75rem 1rem;
@@ -82,7 +116,6 @@
     border-radius: 0;
     padding: 1rem;
     transform: translateX(-100%);
-    transition: transform 0.3s ease;
     overflow-y: auto;
     
     &.show {
@@ -96,7 +129,7 @@
     align-items: center;
     margin-bottom: 1.5rem;
     padding-bottom: 0.875rem;
-    border-bottom: 1px solid #eee;
+    border-bottom: 2px solid rgba(235, 235, 240, 1);
 
     h2 {
       font-size: 1.875rem;
@@ -119,9 +152,7 @@
       font-weight: 400;
       margin-top: 14px;
 
-      &:hover {
-        text-decoration: underline;
-      }
+    
     }
 
     .close-filter-btn {
@@ -142,7 +173,7 @@
 
 // Filter Section Styles
 .filter-section {
-  border-bottom: 1px solid #eee;
+  border-bottom: 2px solid rgba(235, 235, 240, 1);
   transition: all 0.3s ease;
   overflow: hidden;
 
@@ -174,8 +205,7 @@
       transition: transform 0.3s ease;
       
       img {
-        // width: 12px;
-        // height: 12px;
+       
         transition: transform 0.3s ease;
       }
     }
@@ -186,8 +216,8 @@
     flex-direction: column;
     gap: 0.8125rem;
     transition: all 0.3s ease;
-    overflow: hidden;
-    padding-right: 8px;
+    overflow-y: auto;
+        padding-right: 8px;
 
     &[style*="display: none"] {
       max-height: 0;
@@ -197,9 +227,11 @@
     }
 
     &[style*="display: flex"] {
-      max-height: 425px;
+      max-height: 407px;
       margin-bottom: 42px;
       opacity: 1;
+      margin-right: 10px;
+
     }
 
     &::-webkit-scrollbar {
@@ -207,12 +239,12 @@
     }
 
     &::-webkit-scrollbar-track {
-      background: #f1f1f1;
+      background: rgba(234, 234, 234, 1);
       border-radius: 4px;
     }
 
     &::-webkit-scrollbar-thumb {
-      background: #ddd;
+      background: rgba(81, 81, 81, 1);
       border-radius: 4px;
 
       &:hover {
@@ -231,6 +263,8 @@
       width: 16px;
       height: 16px;
       cursor: pointer;
+      accent-color: rgba(117, 33, 87, 1); 
+
     }
 
     span {
@@ -240,11 +274,7 @@
       font-family: Almarai, sans-serif;
     }
 
-    &:hover {
-      span {
-        color: #8b185e;
-      }
-    }
+    
   }
 
   // Price Range Styles
@@ -301,7 +331,7 @@
       }
 
       &.black-star {
-        filter: brightness(66%);
+        filter: brightness(30%);
       }
     }
   }
@@ -334,6 +364,7 @@
   }
 }
 
+
 .color-box {
   width: 35px;
   height: 35px;
@@ -343,8 +374,24 @@
   position: relative;
   padding: 0;
   transition: all 0.2s ease;
+  
+  //add boarder hashed
+  &::before {
+    content: "";
+    position: absolute;
+    top: -6px;
+    left: -6px;
+    right: -6px;
+    bottom: -6px;
+    border: 1px dashed rgba(234, 234, 234, 1); 
+    border-radius: 4px;
+  }
 
   &.selected {
+    &::before {
+      display: none; 
+    }
+    
     &::after {
       content: "";
       position: absolute;
@@ -362,6 +409,24 @@
   }
 }
 
+
+///price input
+.price-range {
+  margin-top: 1rem;
+  
+  input {
+    &.error {
+      border-color: #ff4d4f;
+    }
+  }
+
+  .price-error {
+    color: #ff4d4f;
+    font-size: 0.75rem;
+    margin-top: 0.25rem;
+    display: block;
+  }
+}
 // Overlay for mobile
 .filter-overlay {
   display: none;
