--- a/Ecommerce/src/styles/home.scss
+++ b/Ecommerce/src/styles/home.scss
@@ -14,18 +14,18 @@
 
  
   .container {
-    height: 173px;
-    margin-top: 20px;
+    height: 10.8125rem;
+    margin-top: 1.25rem;
 
   }
 
   .hero-content {
     color: #752157;
     margin-left: 19.5rem;
-    height: 173px;
+    height: 10.8125rem;
     display: flex;
     flex-direction: column;
-    padding-top: 20px;
+    padding-top: 1.25rem;
   
     h1 {
       font-size: 2.2rem;
@@ -39,7 +39,7 @@
         display: flex;
         align-items: center;
         gap: 0.5rem;
-        height: 40px;
+        height: 2.5rem;
   
         .title {
           color: #752157;
@@ -49,20 +49,20 @@
         .subtitle {
           color: #8b185e;
           font-weight: 400;
-          font-size: 36px;        }
+          font-size: 2.25rem;        }
       }
       
       .second-line {
         display: flex;
         align-items: center;
         gap: 0.5rem;
-        height: 40px;
+        height: 2.5rem;
   
         .prefix {
           color: rgba(117, 33, 87, 1);
           font-weight: 300;
-          font-size: 36px;
-          line-height: 40px;
+          font-size: 2.25rem;
+          line-height: 2.5rem;
         }
   
         .main-text {
@@ -74,7 +74,7 @@
   
     p {
       color: rgba(118, 118, 118, 1);
-      margin: 0 0 10px 0;
+      margin: 0 0 0.625rem 0;
       max-width: 28.9375rem;
       font-size: 0.875rem;
       line-height: 1.25rem;
@@ -83,13 +83,13 @@
     .discover-btn {
       color: rgba(117, 33, 87, 1);
       border: 2px solid rgba(117, 33, 87, 1);
-      padding: auto;
+      padding: 0.1875rem 1.5rem;
       border-radius: 0.5rem;
       cursor: pointer;
       font-size: 1.125rem;
       transition: background-color 0.2s ease;
-      width: 180px;
-      height: 29.75px;
+      width: 11.25rem;
+      height: 1.859rem;
       background-color: initial;
       margin-top: 5px;
     }
@@ -98,7 +98,7 @@
 
 // Container Layout
 .container {
-  max-width: 1920px;
+  max-width: 120rem;
   margin: 0 auto;
   // width: 100%;
   
@@ -113,9 +113,9 @@
 
 // Products Section Layout
 .products-section {
-  padding: 2rem 0;
+  padding: 1rem 0;
   position: relative;
-  max-width: 1920px;
+  max-width: 120rem;
   margin: 0 auto;
 
   .products-header {
@@ -206,24 +206,7 @@
   }
 }
 
-// Pagination
-.pagination-container {
-  width: 100%;
-  margin: 2rem auto;
-  padding: 0 1rem;
-  position: relative;
-  z-index: 5;
 
-  .pagination {
-    width: 100%;
-    max-width: 957px;
-    margin: 0 auto;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 0.5rem;
-  }
-}
 
 // Responsive Hero
 @media (max-width: 64rem) {
