--- a/Ecommerce/src/styles/navbar.scss
+++ b/Ecommerce/src/styles/navbar.scss
@@ -1,3 +1,4 @@
+
 header {
   width: 100%;
 }
@@ -14,6 +15,11 @@ header {
     margin-right: 8.4375rem;
     position: relative;
 
+    @media (max-width: 1900px) {
+      margin-left: 2rem;
+      margin-right: 2rem;
+    }
+
     @media (max-width: 1500px) {
       margin-left: 2rem;
       margin-right: 2rem;
@@ -26,6 +32,8 @@ header {
     border: none;
     cursor: pointer;
     padding: 0.5rem;
+    margin-left: auto; 
+    order: 4; 
 
     img {
       width: 24px;
@@ -47,7 +55,7 @@ header {
     font-weight: 400;
     font-size: 0.9375rem;
     font-family: Almarai, sans-serif;
-
+    order: 1;
 
     @media (max-width: 1500px) {
       margin-left: 1rem;
@@ -59,19 +67,46 @@ header {
       font-weight: 700; 
       color: rgba(255, 255, 255, 1); 
       font-family: Almarai, sans-serif;
-
     }
   }
-
 
   .search-bar {
     width: 43.625rem;
     flex: initial; 
     display: flex;
     height: 2.25rem;
+    order: 2;
     
     @media (max-width: 1300px) {
       display: none;
+    }
+
+    .mobile-search & {
+      width: 100%;
+      display: flex;
+      
+      @media (max-width: 576px) {
+        height: 2rem; 
+        
+        input {
+          font-size: 0.875rem; 
+        }
+        
+        .select-wrapper select {
+          width: 3.5rem; 
+          padding-right: 1.5rem;
+          font-size: 0.875rem;
+        }
+        
+        .search-btn {
+          width: 35px; 
+          
+          img {
+            width: 16px;
+            height: 16px;
+          }
+        }
+      }
     }
 
     .select-wrapper {
@@ -125,6 +160,7 @@ header {
     align-items: center;
     color: white;
     margin-left: auto;
+    order: 3;
 
     @media (max-width: 1200px) {
       display: none;
@@ -152,9 +188,20 @@ header {
         order: -1;
       }
 
+      @media (max-width: 576px) {
+        padding: 0 0.5rem; 
+      }
+
       .search-bar {
         display: flex;
         width: 100%;
+        
+        @media (max-width: 400px) {
+          min-width: unset; 
+          input {
+            min-width: 100px; 
+          }
+        }
       }
     }
 
@@ -181,19 +228,19 @@ header {
 
       .iconlan {
         margin-left: 57px;
-        @media (max-width: 1500px) {
+        @media (max-width: 1900px) {
           margin-left: 1rem;
         }
       }
       .login {
         margin-right: 74px;
-        @media (max-width: 1500px) {
+        @media (max-width: 1900px) {
           margin-right: 1rem;
         }
       }
       .languge {
         margin-right: 53px;
-        @media (max-width: 1500px) {
+        @media (max-width: 1900px) {
           margin-right: 1rem;
         }
       }
@@ -254,7 +301,7 @@ header {
     gap: 2.75rem;
     margin-left: 8.0625rem;
 
-    @media (max-width: 1500px) {
+    @media (max-width: 1900px) {
       margin-left: 2rem;
     }
   }
